@@ -1,3 +1,9 @@
+2007-05-17  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkbmc.c, gnome-keyboard-properties.glade:
+	adding vendor list to the box (option, if there are vendors in
+	base.xml)
+
 2007-05-05  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-keyboard-properties.c: (create_dialog):
